syntax = "proto3";

package syllabus.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/syllabus/v1;sspb";

//LearningMaterialType describe all learning material types
enum LearningMaterialType {
    LEARNING_MATERIAL_LEARNING_OBJECTIVE = 0;
    LEARNING_MATERIAL_EXAM_LO = 1;
    LEARNING_MATERIAL_FLASH_CARD = 2;
    LEARNING_MATERIAL_GENERAL_ASSIGNMENT = 3;
    // deprecated LEARNING_MATERIAL_OFFLINE_LEARNING
    reserved 4;
    reserved "LEARNING_MATERIAL_OFFLINE_LEARNING";
    LEARNING_MATERIAL_TASK_ASSIGNMENT = 5;
}

enum AchievementCrown {
    ACHIEVEMENT_CROWN_NONE = 0;
    ACHIEVEMENT_CROWN_BRONZE = 1;
    ACHIEVEMENT_CROWN_SILVER = 2;
    ACHIEVEMENT_CROWN_GOLD = 3;
}
enum SubmissionStatus {
    SUBMISSION_STATUS_NONE = 0;
    SUBMISSION_STATUS_NOT_MARKED = 1;
    SUBMISSION_STATUS_IN_PROGRESS = 2;
    SUBMISSION_STATUS_MARKED = 3;
    SUBMISSION_STATUS_RETURNED = 4;
    SUBMISSION_STATUS_PENDING_RETURN = 5;
    SUBMISSION_STATUS_REJECTED = 6;
}

enum SubmissionUnderstandingLevel {
    SUBMISSION_UNDERSTANDING_LEVEL_NONE = 0;
    SUBMISSION_UNDERSTANDING_LEVEL_SAD = 1;
    SUBMISSION_UNDERSTANDING_LEVEL_NEUTRAL = 2;
    SUBMISSION_UNDERSTANDING_LEVEL_HAPPY = 3;
}

enum StudyPlanStatus {
    STUDY_PLAN_STATUS_NONE = 0;
    STUDY_PLAN_STATUS_ACTIVE = 1;
    STUDY_PLAN_STATUS_ARCHIVED = 2;
}

enum StudyPlanItemToDoStatus {
    STUDY_PLAN_ITEM_TO_DO_STATUS_NONE = 0;
    STUDY_PLAN_ITEM_TO_DO_STATUS_ACTIVE = 1;
    STUDY_PLAN_ITEM_TO_DO_STATUS_OVERDUE = 2;
    STUDY_PLAN_ITEM_TO_DO_STATUS_COMPLETED = 3;
    STUDY_PLAN_ITEM_TO_DO_STATUS_UPCOMING = 4;
}

enum StudyPlanItemStatus {
    STUDY_PLAN_ITEM_STATUS_NONE = 0;
    STUDY_PLAN_ITEM_STATUS_ACTIVE = 1;
    STUDY_PLAN_ITEM_STATUS_ARCHIVED = 2;
}

enum ExamLOSubmissionResult {
	EXAM_LO_SUBMISSION_WAITING_FOR_GRADE = 0;
	EXAM_LO_SUBMISSION_PASSED = 1;
	EXAM_LO_SUBMISSION_FAILED = 2;
	EXAM_LO_SUBMISSION_COMPLETED = 3;
}

enum ApproveGradingAction {
    APPROVE_ACTION_NONE = 0;
    APPROVE_ACTION_APPROVED = 1;
    APPROVE_ACTION_REJECTED = 2;
}

enum SearchType {
    SEARCH_TYPE_NONE = 0;
    SEARCH_TYPE_ASSIGNMENT_NAME = 1;
    SEARCH_TYPE_STUDENT_NAME = 2;
}
// FlashcardQuizStudyStatus describe all flashcard quiz study Status
enum FlashcardQuizStudyStatus {
    FLASHCARD_QUIZ_STUDY_STATUS_NONE = 0;
    FLASHCARD_QUIZ_STUDY_STATUS_SKIPPED = 1;
    FLASHCARD_QUIZ_STUDY_STATUS_REMEMBERED = 2;
}

enum ExamLOReviewOption {
    EXAM_LO_REVIEW_OPTION_IMMEDIATELY = 0;
    EXAM_LO_REVIEW_OPTION_AFTER_DUE_DATE = 1;
}

enum LearningMaterialVendorType {
    LM_VENDOR_TYPE_MANABIE = 0;
    LM_VENDOR_TYPE_LEARNOSITY = 1;
}

enum AssessmentSessionStatus {
    ASSESSMENT_SESSION_STATUS_NONE = 0;
    ASSESSMENT_SESSION_STATUS_INCOMPLETE = 1;
    ASSESSMENT_SESSION_STATUS_COMPLETED = 2;
}

enum ItemsBankErrorCode{
    ERR_UNKNOWN = 0;
    ERR_CORRECT_OPTION_MISSING = 1;
    ERR_ITEM_DESCRIPTION_INVALID = 2;
    ERR_QUESTION_LIMIT_EXCEEDED = 3;
    ERR_DATA_TYPE_INVALID = 4;
    ERR_REQUIRED_VALUE_MISSING = 5;
    ERR_LO_ID_INVALID = 6;
    ERR_QUESTION_TYPE_INVALID = 7;
    ERR_OPTIONS_MISSING = 8;
    ERR_NO_OPTION_SELECTED = 9;
    ERR_FIB_OPTIONS_INVALID = 10;
    ERR_VALUE_OUT_OF_RANGE = 11;
    ERR_ITEM_ID_ALREADY_EXISTS = 12;
    ERR_MCQ_CORRECT_OPTIONS_INVALID = 13;
    ERR_IMAGE_INVALID = 14;
    ERR_MIQ_EXPLANATION_MISSING = 15;
    ERR_ITEM_ID_INVALID = 16;
  }

enum MediaType {
    MEDIA_TYPE_NONE = 0;
    MEDIA_TYPE_IMAGE = 1;
}
